--- a/Matchmaking.ipynb
+++ b/Matchmaking.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -115,33 +115,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Arthur</td>\n",
-       "      <td>45</td>\n",
-       "      <td>Masculino</td>\n",
-       "      <td>FPS</td>\n",
-       "      <td>Valorant</td>\n",
-       "      <td>Diamante</td>\n",
-       "      <td>Smoke</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Joao</td>\n",
-       "      <td>30</td>\n",
-       "      <td>Masculino</td>\n",
-       "      <td>MOBA</td>\n",
-       "      <td>Lol</td>\n",
-       "      <td>diamante</td>\n",
-       "      <td>bot</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Hillary</td>\n",
-       "      <td>65</td>\n",
-       "      <td>FEMININO</td>\n",
+       "      <td>pedro</td>\n",
+       "      <td>26</td>\n",
+       "      <td>MASCULINO</td>\n",
        "      <td>MOBA</td>\n",
        "      <td>LOL</td>\n",
-       "      <td>BRONZE</td>\n",
-       "      <td>JUNGLE</td>\n",
+       "      <td>PRATA</td>\n",
+       "      <td>TOP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -152,17 +132,13 @@
        "0  Arthur Silva França     19   Masculino            FPS           Valorant   \n",
        "1          Kaio Victor     20  Indefinido           MOBA           Valorant   \n",
        "2         André Victor     19    Feminino           MOBA  League of Legends   \n",
-       "3               Arthur     45   Masculino            FPS           Valorant   \n",
-       "4                 Joao     30   Masculino           MOBA                Lol   \n",
-       "5              Hillary     65    FEMININO           MOBA                LOL   \n",
+       "3                pedro     26   MASCULINO           MOBA                LOL   \n",
        "\n",
        "  Nível ranked    Função  \n",
        "0      Imortal  Duelista  \n",
        "1   Não possui     Smoke  \n",
        "2        Ferro       Top  \n",
-       "3     Diamante     Smoke  \n",
-       "4     diamante       bot  \n",
-       "5       BRONZE    JUNGLE  "
+       "3        PRATA       TOP  "
       ]
      },
      "metadata": {},
@@ -190,11 +166,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oi\n"
+     ]
+    }
+   ],
    "source": [
-    "asdas"
+    "print('oi')"
    ]
   }
  ],
@@ -214,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
