ATT busca sequencial

--- a/Matchmaking.ipynb
+++ b/Matchmaking.ipynb
@@ -168,17 +168,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "oi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('oi')"
+    "# Função de def busca_sequencial()\n",
+    "def busca_sequencial():\n",
+    "    print(\"buscando...\")"
    ]
   }
  ],
