--- a/Matchmaking.ipynb
+++ b/Matchmaking.ipynb
@@ -174,6 +174,34 @@
     "def busca_sequencial():\n",
     "    print(\"buscando...\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculadora...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Função def calculadora_similaridade()\n",
+    "def calculadora_similaridade():\n",
+    "    print(\"Calculadora...\")\n",
+    "\n",
+    "calculadora_similaridade()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -192,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
