func quicksort att

--- a/Matchmaking.ipynb
+++ b/Matchmaking.ipynb
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Função de def busca_sequencial()\n",
+    "# Função def busca_sequencial()\n",
     "def busca_sequencial():\n",
     "    print(\"buscando...\")"
    ]
@@ -202,7 +202,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"teste\")"
+    "# Função def quicksort(a,b)\n",
+    "\n",
+    "def quicksort(a,b):\n",
+    "    print('batman...')"
    ]
   }
  ],
