func busca sequencial #2

--- a/Matchmaking.ipynb
+++ b/Matchmaking.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -115,11 +115,61 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>pedro</td>\n",
-       "      <td>26</td>\n",
+       "      <td>caio</td>\n",
+       "      <td>17</td>\n",
        "      <td>MASCULINO</td>\n",
        "      <td>MOBA</td>\n",
-       "      <td>LOL</td>\n",
+       "      <td>LEAGUE OF LEGENDS</td>\n",
+       "      <td>PRATA</td>\n",
+       "      <td>TOP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>luis</td>\n",
+       "      <td>29</td>\n",
+       "      <td>MASCULINO</td>\n",
+       "      <td>MOBA</td>\n",
+       "      <td>LEAGUE OF LEGENDS</td>\n",
+       "      <td>PRATA</td>\n",
+       "      <td>MID</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>marcos</td>\n",
+       "      <td>27</td>\n",
+       "      <td>MASCULINO</td>\n",
+       "      <td>MOBA</td>\n",
+       "      <td>LEAGUE OF LEGENDS</td>\n",
+       "      <td>PRATA</td>\n",
+       "      <td>SUPORTE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>lucas</td>\n",
+       "      <td>15</td>\n",
+       "      <td>MASCULINO</td>\n",
+       "      <td>MOBA</td>\n",
+       "      <td>LEAGUE OF LEGENDS</td>\n",
+       "      <td>PRATA</td>\n",
+       "      <td>JUNGLE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>pedro</td>\n",
+       "      <td>33</td>\n",
+       "      <td>MASCULINO</td>\n",
+       "      <td>MOBA</td>\n",
+       "      <td>LEAGUE OF LEGENDS</td>\n",
+       "      <td>PRATA</td>\n",
+       "      <td>ADC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>eduardo</td>\n",
+       "      <td>45</td>\n",
+       "      <td>MASCULINO</td>\n",
+       "      <td>MOBA</td>\n",
+       "      <td>LEAGUE OF LEGENDS</td>\n",
        "      <td>PRATA</td>\n",
        "      <td>TOP</td>\n",
        "    </tr>\n",
@@ -132,13 +182,23 @@
        "0  Arthur Silva França     19   Masculino            FPS           Valorant   \n",
        "1          Kaio Victor     20  Indefinido           MOBA           Valorant   \n",
        "2         André Victor     19    Feminino           MOBA  League of Legends   \n",
-       "3                pedro     26   MASCULINO           MOBA                LOL   \n",
+       "3                 caio     17   MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
+       "4                 luis     29   MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
+       "5               marcos     27   MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
+       "6                lucas     15   MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
+       "7                pedro     33   MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
+       "8              eduardo     45   MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
        "\n",
        "  Nível ranked    Função  \n",
        "0      Imortal  Duelista  \n",
        "1   Não possui     Smoke  \n",
        "2        Ferro       Top  \n",
-       "3        PRATA       TOP  "
+       "3        PRATA       TOP  \n",
+       "4        PRATA       MID  \n",
+       "5        PRATA   SUPORTE  \n",
+       "6        PRATA    JUNGLE  \n",
+       "7        PRATA       ADC  \n",
+       "8        PRATA       TOP  "
       ]
      },
      "metadata": {},
@@ -166,13 +226,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usuário encontrado:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Nome': 'caio',\n",
+       " 'Idade': 17,\n",
+       " 'Sexo': 'MASCULINO',\n",
+       " 'Gênero de jogo': 'MOBA',\n",
+       " 'Jogo de busca': 'LEAGUE OF LEGENDS',\n",
+       " 'Nível ranked': 'PRATA',\n",
+       " 'Função': 'TOP'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usuário encontrado:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Nome': 'eduardo',\n",
+       " 'Idade': 45,\n",
+       " 'Sexo': 'MASCULINO',\n",
+       " 'Gênero de jogo': 'MOBA',\n",
+       " 'Jogo de busca': 'LEAGUE OF LEGENDS',\n",
+       " 'Nível ranked': 'PRATA',\n",
+       " 'Função': 'TOP'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Função def busca_sequencial()\n",
+    "\n",
     "def busca_sequencial():\n",
-    "    print(\"buscando...\")"
+    "    jogo_procurado = input('Digite o jogo que você está buscando: ').capitalize()\n",
+    "    ranked_procurado = input('Digite o nível ranked que você está buscando: ').capitalize()\n",
+    "    funcao_procurada = input('Digite a função que você está buscando para ser seu duo: ').capitalize()\n",
+    "\n",
+    "    encontrou = False\n",
+    "\n",
+    "    for user in users:\n",
+    "        if (user['Jogo de busca'].capitalize() == jogo_procurado and\n",
+    "            user['Nível ranked'].capitalize() == ranked_procurado and\n",
+    "            user['Função'].capitalize() == funcao_procurada):\n",
+    "            print('Usuário encontrado:')\n",
+    "            display(user)\n",
+    "            encontrou = True\n",
+    "\n",
+    "    if not encontrou:\n",
+    "        print('Nenhum usuário encontrado com os critérios especificados.')\n",
+    "\n",
+    "busca_sequencial()"
    ]
   },
   {
@@ -198,14 +321,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Função def quicksort(a,b)\n",
     "\n",
     "def quicksort(a,b):\n",
-    "    print('robin...')"
+    "    print('testando att')"
    ]
   }
  ],
@@ -225,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
