func busca sequencial #3

--- a/Matchmaking.ipynb
+++ b/Matchmaking.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -115,8 +115,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>caio</td>\n",
-       "      <td>17</td>\n",
+       "      <td>francisco</td>\n",
+       "      <td>29</td>\n",
        "      <td>MASCULINO</td>\n",
        "      <td>MOBA</td>\n",
        "      <td>LEAGUE OF LEGENDS</td>\n",
@@ -125,48 +125,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>luis</td>\n",
-       "      <td>29</td>\n",
-       "      <td>MASCULINO</td>\n",
-       "      <td>MOBA</td>\n",
-       "      <td>LEAGUE OF LEGENDS</td>\n",
-       "      <td>PRATA</td>\n",
-       "      <td>MID</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>marcos</td>\n",
-       "      <td>27</td>\n",
-       "      <td>MASCULINO</td>\n",
-       "      <td>MOBA</td>\n",
-       "      <td>LEAGUE OF LEGENDS</td>\n",
-       "      <td>PRATA</td>\n",
-       "      <td>SUPORTE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>lucas</td>\n",
-       "      <td>15</td>\n",
-       "      <td>MASCULINO</td>\n",
-       "      <td>MOBA</td>\n",
-       "      <td>LEAGUE OF LEGENDS</td>\n",
-       "      <td>PRATA</td>\n",
-       "      <td>JUNGLE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>pedro</td>\n",
-       "      <td>33</td>\n",
-       "      <td>MASCULINO</td>\n",
-       "      <td>MOBA</td>\n",
-       "      <td>LEAGUE OF LEGENDS</td>\n",
-       "      <td>PRATA</td>\n",
-       "      <td>ADC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>eduardo</td>\n",
-       "      <td>45</td>\n",
+       "      <td>joão</td>\n",
+       "      <td>19</td>\n",
        "      <td>MASCULINO</td>\n",
        "      <td>MOBA</td>\n",
        "      <td>LEAGUE OF LEGENDS</td>\n",
@@ -182,23 +142,15 @@
        "0  Arthur Silva França     19   Masculino            FPS           Valorant   \n",
        "1          Kaio Victor     20  Indefinido           MOBA           Valorant   \n",
        "2         André Victor     19    Feminino           MOBA  League of Legends   \n",
-       "3                 caio     17   MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
-       "4                 luis     29   MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
-       "5               marcos     27   MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
-       "6                lucas     15   MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
-       "7                pedro     33   MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
-       "8              eduardo     45   MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
+       "3           francisco      29   MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
+       "4                 joão     19   MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
        "\n",
        "  Nível ranked    Função  \n",
        "0      Imortal  Duelista  \n",
        "1   Não possui     Smoke  \n",
        "2        Ferro       Top  \n",
        "3        PRATA       TOP  \n",
-       "4        PRATA       MID  \n",
-       "5        PRATA   SUPORTE  \n",
-       "6        PRATA    JUNGLE  \n",
-       "7        PRATA       ADC  \n",
-       "8        PRATA       TOP  "
+       "4        PRATA       TOP  "
       ]
      },
      "metadata": {},
@@ -226,48 +178,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Usuário encontrado:\n"
+      "Usuários encontrados:\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Sexo</th>\n",
+       "      <th>Gênero de jogo</th>\n",
+       "      <th>Jogo de busca</th>\n",
+       "      <th>Nível ranked</th>\n",
+       "      <th>Função</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>francisco</td>\n",
+       "      <td>29</td>\n",
+       "      <td>MASCULINO</td>\n",
+       "      <td>MOBA</td>\n",
+       "      <td>LEAGUE OF LEGENDS</td>\n",
+       "      <td>PRATA</td>\n",
+       "      <td>TOP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>joão</td>\n",
+       "      <td>19</td>\n",
+       "      <td>MASCULINO</td>\n",
+       "      <td>MOBA</td>\n",
+       "      <td>LEAGUE OF LEGENDS</td>\n",
+       "      <td>PRATA</td>\n",
+       "      <td>TOP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'Nome': 'caio',\n",
-       " 'Idade': 17,\n",
-       " 'Sexo': 'MASCULINO',\n",
-       " 'Gênero de jogo': 'MOBA',\n",
-       " 'Jogo de busca': 'LEAGUE OF LEGENDS',\n",
-       " 'Nível ranked': 'PRATA',\n",
-       " 'Função': 'TOP'}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Usuário encontrado:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Nome': 'eduardo',\n",
-       " 'Idade': 45,\n",
-       " 'Sexo': 'MASCULINO',\n",
-       " 'Gênero de jogo': 'MOBA',\n",
-       " 'Jogo de busca': 'LEAGUE OF LEGENDS',\n",
-       " 'Nível ranked': 'PRATA',\n",
-       " 'Função': 'TOP'}"
+       "         Nome  Idade       Sexo Gênero de jogo      Jogo de busca  \\\n",
+       "0  francisco      29  MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
+       "1        joão     19  MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
+       "\n",
+       "  Nível ranked Função  \n",
+       "0        PRATA    TOP  \n",
+       "1        PRATA    TOP  "
       ]
      },
      "metadata": {},
@@ -283,16 +266,19 @@
     "    funcao_procurada = input('Digite a função que você está buscando para ser seu duo: ').capitalize()\n",
     "\n",
     "    encontrou = False\n",
+    "    resultados = []\n",
     "\n",
     "    for user in users:\n",
     "        if (user['Jogo de busca'].capitalize() == jogo_procurado and\n",
     "            user['Nível ranked'].capitalize() == ranked_procurado and\n",
     "            user['Função'].capitalize() == funcao_procurada):\n",
-    "            print('Usuário encontrado:')\n",
-    "            display(user)\n",
+    "            resultados.append(user)\n",
     "            encontrou = True\n",
     "\n",
-    "    if not encontrou:\n",
+    "    if encontrou:\n",
+    "        print('Usuários encontrados:')\n",
+    "        display(pd.DataFrame(resultados))\n",
+    "    else:\n",
     "        print('Nenhum usuário encontrado com os critérios especificados.')\n",
     "\n",
     "busca_sequencial()"
