Adicionada a função CALCULADORA_SIMILARIDADE V.1

--- a/Matchmaking.ipynb
+++ b/Matchmaking.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Caso a pessoa apenas queira entrar no banco de dados.\n",
+    "# Função que irá adicionar os usuários dentro do dicionário;\n",
+    "\n",
+    "def cadastrar_user():\n",
+    "    nome = input(\"Digite seu nome: \")\n",
+    "    idade = int(input(\"Quantos anos você têm? \"))\n",
+    "    sexo = input(\"Qual seu sexo? \")\n",
+    "    genero_de_jogo = input(\"Qual gênero do jogo você está buscando? \")\n",
+    "    jogo = input(\"Qual jogo você está buscando? \")\n",
+    "    ranked = input(\"Qual seu nível em ranqueadas? \")\n",
+    "    funcao = input(\"Qual sua função?(exemplo: duelista, top etc) \")\n",
+    "    user_new = {\"Nome\": nome.capitalize() , \"Idade\" : idade, \"Sexo\" : sexo.capitalize(), \"Gênero de jogo\" : genero_de_jogo.capitalize(), \"Jogo de busca\" : jogo.capitalize(), \"Nível ranked\" : ranked.capitalize() , \"Função\" : funcao.capitalize()}\n",
+    "    users.append(user_new)\n",
+    "    print(\"Você realizou seu cadastro com sucesso!\")\n",
+    "    display(pd.DataFrame(users))\n",
+    "    return user_new\n",
+    "cadastrar_user()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nenhum usuário encontrado com os critérios especificados.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Caso a pessoa deseje pesquisar os usuários\n",
+    "# Função def busca_sequencial()\n",
+    "\n",
+    "def busca_sequencial():\n",
+    "    jogo_procurado = input('Digite o jogo que você está buscando: ').capitalize()\n",
+    "    ranked_procurado = input('Digite o nível ranked que você está buscando: ').capitalize()\n",
+    "    funcao_procurada = input('Digite a função que você está buscando para ser seu duo: ').capitalize()\n",
+    "\n",
+    "    encontrou = False\n",
+    "    resultados = []\n",
+    "\n",
+    "    for user in users:\n",
+    "        if (user['Jogo de busca'].capitalize() == jogo_procurado and\n",
+    "            user['Nível ranked'].capitalize() == ranked_procurado and\n",
+    "            user['Função'].capitalize() == funcao_procurada):\n",
+    "            resultados.append(user)\n",
+    "            encontrou = True\n",
+    "\n",
+    "    if encontrou:\n",
+    "        print('Usuários encontrados:')\n",
+    "        display(pd.DataFrame(resultados))\n",
+    "    else:\n",
+    "        print('Nenhum usuário encontrado com os critérios especificados.')\n",
+    "\n",
+    "busca_sequencial()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -115,77 +181,124 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>francisco</td>\n",
-       "      <td>29</td>\n",
-       "      <td>MASCULINO</td>\n",
-       "      <td>MOBA</td>\n",
-       "      <td>LEAGUE OF LEGENDS</td>\n",
-       "      <td>PRATA</td>\n",
-       "      <td>TOP</td>\n",
+       "      <td>Leleco</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Moba</td>\n",
+       "      <td>League of legends</td>\n",
+       "      <td>Prata</td>\n",
+       "      <td>Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>joão</td>\n",
+       "      <td>Leleco</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Moba</td>\n",
+       "      <td>League of legends</td>\n",
+       "      <td>Prata</td>\n",
+       "      <td>Top</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Arthur</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Fps</td>\n",
+       "      <td>Valorant</td>\n",
+       "      <td>Ouro</td>\n",
+       "      <td>Duelista</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Julia</td>\n",
        "      <td>19</td>\n",
-       "      <td>MASCULINO</td>\n",
-       "      <td>MOBA</td>\n",
-       "      <td>LEAGUE OF LEGENDS</td>\n",
-       "      <td>PRATA</td>\n",
-       "      <td>TOP</td>\n",
+       "      <td>Feminina</td>\n",
+       "      <td>Valorant</td>\n",
+       "      <td>Valorant</td>\n",
+       "      <td>Ouro</td>\n",
+       "      <td>Duelista</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Jaka</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Feminino</td>\n",
+       "      <td>Fps</td>\n",
+       "      <td>Valorant</td>\n",
+       "      <td>Bronze</td>\n",
+       "      <td>Duelista</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Athur</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Moba</td>\n",
+       "      <td>League of legends</td>\n",
+       "      <td>Esmeralda</td>\n",
+       "      <td>Top</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Arthur</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Fps</td>\n",
+       "      <td>Valorant</td>\n",
+       "      <td>Ouro</td>\n",
+       "      <td>Smoke</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Gabriele</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Feminino</td>\n",
+       "      <td>Fps</td>\n",
+       "      <td>Valorant</td>\n",
+       "      <td>Prata</td>\n",
+       "      <td>Duelista</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  Nome  Idade        Sexo Gênero de jogo      Jogo de busca  \\\n",
-       "0  Arthur Silva França     19   Masculino            FPS           Valorant   \n",
-       "1          Kaio Victor     20  Indefinido           MOBA           Valorant   \n",
-       "2         André Victor     19    Feminino           MOBA  League of Legends   \n",
-       "3           francisco      29   MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
-       "4                 joão     19   MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
+       "                   Nome  Idade        Sexo Gênero de jogo      Jogo de busca  \\\n",
+       "0   Arthur Silva França     19   Masculino            FPS           Valorant   \n",
+       "1           Kaio Victor     20  Indefinido           MOBA           Valorant   \n",
+       "2          André Victor     19    Feminino           MOBA  League of Legends   \n",
+       "3                Leleco     10   Masculino           Moba  League of legends   \n",
+       "4                Leleco     10   Masculino           Moba  League of legends   \n",
+       "5                Arthur     17   Masculino            Fps           Valorant   \n",
+       "6                 Julia     19    Feminina       Valorant           Valorant   \n",
+       "7                  Jaka     16    Feminino            Fps           Valorant   \n",
+       "8                 Athur     19   Masculino           Moba  League of legends   \n",
+       "9                Arthur     14   Masculino            Fps           Valorant   \n",
+       "10             Gabriele     19    Feminino            Fps           Valorant   \n",
        "\n",
-       "  Nível ranked    Função  \n",
-       "0      Imortal  Duelista  \n",
-       "1   Não possui     Smoke  \n",
-       "2        Ferro       Top  \n",
-       "3        PRATA       TOP  \n",
-       "4        PRATA       TOP  "
+       "   Nível ranked    Função  \n",
+       "0       Imortal  Duelista  \n",
+       "1    Não possui     Smoke  \n",
+       "2         Ferro       Top  \n",
+       "3         Prata       Mid  \n",
+       "4         Prata       Top  \n",
+       "5          Ouro  Duelista  \n",
+       "6          Ouro  Duelista  \n",
+       "7        Bronze  Duelista  \n",
+       "8     Esmeralda       Top  \n",
+       "9          Ouro     Smoke  \n",
+       "10        Prata  Duelista  "
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Função que irá adicionar os usuários dentro do dicionário;\n",
-    "\n",
-    "def cadastrar_user():\n",
-    "    nome = input(\"Digite seu nome: \")\n",
-    "    idade = int(input(\"Quantos anos você têm? \"))\n",
-    "    sexo = input(\"Qual seu sexo? \")\n",
-    "    genero_de_jogo = input(\"Qual gênero do jogo você está buscando? \")\n",
-    "    jogo = input(\"Qual jogo você está buscando? \")\n",
-    "    ranked = input(\"Qual seu nível em ranqueadas? \")\n",
-    "    funcao = input(\"Qual sua função?(exemplo: duelista, top etc) \")\n",
-    "    user_new = {\"Nome\": nome , \"Idade\" : idade, \"Sexo\" : sexo.upper(), \"Gênero de jogo\" : genero_de_jogo.upper(), \"Jogo de busca\" : jogo.upper(), \"Nível ranked\" : ranked.upper() , \"Função\" : funcao.upper()}\n",
-    "    users.append(user_new)\n",
-    "    print(\"Você realizou seu cadastro com sucesso!\")\n",
-    "    display(pd.DataFrame(users))\n",
-    "    return \n",
-    "cadastrar_user()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Usuários encontrados:\n"
+      "Usuários mais similares:\n"
      ]
     },
     {
@@ -216,41 +329,148 @@
        "      <th>Jogo de busca</th>\n",
        "      <th>Nível ranked</th>\n",
        "      <th>Função</th>\n",
+       "      <th>Similaridade</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>francisco</td>\n",
-       "      <td>29</td>\n",
-       "      <td>MASCULINO</td>\n",
-       "      <td>MOBA</td>\n",
-       "      <td>LEAGUE OF LEGENDS</td>\n",
-       "      <td>PRATA</td>\n",
-       "      <td>TOP</td>\n",
+       "      <td>Arthur Silva França</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>FPS</td>\n",
+       "      <td>Valorant</td>\n",
+       "      <td>Imortal</td>\n",
+       "      <td>Duelista</td>\n",
+       "      <td>0.800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>joão</td>\n",
+       "      <td>Arthur</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Fps</td>\n",
+       "      <td>Valorant</td>\n",
+       "      <td>Ouro</td>\n",
+       "      <td>Duelista</td>\n",
+       "      <td>0.796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jaka</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Feminino</td>\n",
+       "      <td>Fps</td>\n",
+       "      <td>Valorant</td>\n",
+       "      <td>Bronze</td>\n",
+       "      <td>Duelista</td>\n",
+       "      <td>0.794</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Julia</td>\n",
        "      <td>19</td>\n",
-       "      <td>MASCULINO</td>\n",
+       "      <td>Feminina</td>\n",
+       "      <td>Valorant</td>\n",
+       "      <td>Valorant</td>\n",
+       "      <td>Ouro</td>\n",
+       "      <td>Duelista</td>\n",
+       "      <td>0.600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Arthur</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Fps</td>\n",
+       "      <td>Valorant</td>\n",
+       "      <td>Ouro</td>\n",
+       "      <td>Smoke</td>\n",
+       "      <td>0.590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Kaio Victor</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Indefinido</td>\n",
        "      <td>MOBA</td>\n",
-       "      <td>LEAGUE OF LEGENDS</td>\n",
-       "      <td>PRATA</td>\n",
-       "      <td>TOP</td>\n",
+       "      <td>Valorant</td>\n",
+       "      <td>Não possui</td>\n",
+       "      <td>Smoke</td>\n",
+       "      <td>0.398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Leleco</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Moba</td>\n",
+       "      <td>League of legends</td>\n",
+       "      <td>Prata</td>\n",
+       "      <td>Mid</td>\n",
+       "      <td>0.382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Leleco</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Moba</td>\n",
+       "      <td>League of legends</td>\n",
+       "      <td>Prata</td>\n",
+       "      <td>Top</td>\n",
+       "      <td>0.382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>André Victor</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Feminino</td>\n",
+       "      <td>MOBA</td>\n",
+       "      <td>League of Legends</td>\n",
+       "      <td>Ferro</td>\n",
+       "      <td>Top</td>\n",
+       "      <td>0.200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Athur</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Moba</td>\n",
+       "      <td>League of legends</td>\n",
+       "      <td>Esmeralda</td>\n",
+       "      <td>Top</td>\n",
+       "      <td>0.200</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Nome  Idade       Sexo Gênero de jogo      Jogo de busca  \\\n",
-       "0  francisco      29  MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
-       "1        joão     19  MASCULINO           MOBA  LEAGUE OF LEGENDS   \n",
+       "                  Nome  Idade        Sexo Gênero de jogo      Jogo de busca  \\\n",
+       "0  Arthur Silva França     19   Masculino            FPS           Valorant   \n",
+       "1               Arthur     17   Masculino            Fps           Valorant   \n",
+       "2                 Jaka     16    Feminino            Fps           Valorant   \n",
+       "3                Julia     19    Feminina       Valorant           Valorant   \n",
+       "4               Arthur     14   Masculino            Fps           Valorant   \n",
+       "5          Kaio Victor     20  Indefinido           MOBA           Valorant   \n",
+       "6               Leleco     10   Masculino           Moba  League of legends   \n",
+       "7               Leleco     10   Masculino           Moba  League of legends   \n",
+       "8         André Victor     19    Feminino           MOBA  League of Legends   \n",
+       "9                Athur     19   Masculino           Moba  League of legends   \n",
        "\n",
-       "  Nível ranked Função  \n",
-       "0        PRATA    TOP  \n",
-       "1        PRATA    TOP  "
+       "  Nível ranked    Função  Similaridade  \n",
+       "0      Imortal  Duelista         0.800  \n",
+       "1         Ouro  Duelista         0.796  \n",
+       "2       Bronze  Duelista         0.794  \n",
+       "3         Ouro  Duelista         0.600  \n",
+       "4         Ouro     Smoke         0.590  \n",
+       "5   Não possui     Smoke         0.398  \n",
+       "6        Prata       Mid         0.382  \n",
+       "7        Prata       Top         0.382  \n",
+       "8        Ferro       Top         0.200  \n",
+       "9    Esmeralda       Top         0.200  "
       ]
      },
      "metadata": {},
@@ -258,51 +478,40 @@
     }
    ],
    "source": [
-    "# Função def busca_sequencial()\n",
-    "\n",
-    "def busca_sequencial():\n",
-    "    jogo_procurado = input('Digite o jogo que você está buscando: ').capitalize()\n",
-    "    ranked_procurado = input('Digite o nível ranked que você está buscando: ').capitalize()\n",
-    "    funcao_procurada = input('Digite a função que você está buscando para ser seu duo: ').capitalize()\n",
-    "\n",
-    "    encontrou = False\n",
-    "    resultados = []\n",
+    "# Caso o usuário queira pesquisar por um par com similaridades a sua conta.\n",
+    "# Função def calculadora_similaridade()\n",
+    "def calculadora_similaridade(user_new):\n",
+    "    similaridade_resultados = []\n",
     "\n",
     "    for user in users:\n",
-    "        if (user['Jogo de busca'].capitalize() == jogo_procurado and\n",
-    "            user['Nível ranked'].capitalize() == ranked_procurado and\n",
-    "            user['Função'].capitalize() == funcao_procurada):\n",
-    "            resultados.append(user)\n",
-    "            encontrou = True\n",
+    "        if user == user_new:\n",
+    "            continue\n",
+    "        similaridade = 0\n",
+    "        idade_diff = abs(user['Idade'] - user_new['Idade'])\n",
+    "        similaridade += (1 - idade_diff / 100) * 0.20\n",
+    "        if user['Gênero de jogo'].upper() == user_new['Gênero de jogo'].upper():\n",
+    "            similaridade += 0.20\n",
     "\n",
-    "    if encontrou:\n",
-    "        print('Usuários encontrados:')\n",
-    "        display(pd.DataFrame(resultados))\n",
-    "    else:\n",
-    "        print('Nenhum usuário encontrado com os critérios especificados.')\n",
+    "        if user['Jogo de busca'].upper() == user_new['Jogo de busca'].upper():\n",
+    "            similaridade += 0.20\n",
     "\n",
-    "busca_sequencial()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculadora...\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Função def calculadora_similaridade()\n",
-    "def calculadora_similaridade():\n",
-    "    print(\"Calculadora...\")\n",
+    "        if user['Nível ranked'].upper() == user_new['Nível ranked'].upper():\n",
+    "            similaridade += 0.20\n",
     "\n",
-    "calculadora_similaridade()"
+    "        if user['Função'].upper() == user_new['Função'].upper():\n",
+    "            similaridade += 0.20\n",
+    "        \n",
+    "        user['Similaridade'] = similaridade\n",
+    "        similaridade_resultados.append(user)\n",
+    "\n",
+    "    similaridade_resultados.sort(key=lambda x: x['Similaridade'], reverse=True)\n",
+    "    print(\"Usuários mais similares:\")\n",
+    "    display(pd.DataFrame(similaridade_resultados))\n",
+    "\n",
+    "\n",
+    "user_new = cadastrar_user()\n",
+    "\n",
+    "calculadora_similaridade(user_new)"
    ]
   },
   {
@@ -315,6 +524,15 @@
     "\n",
     "def quicksort(a,b):\n",
     "    print('testando att')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Função matchmaking()\n"
    ]
   }
  ],
@@ -334,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
